# novaproxy

./: .gitignore  Cargo.toml  LICENSE  NovaProxy.md  README.md  design.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
claude-design/: NovaProxy Prototype.html
crates/nova-core/: Cargo.toml
crates/nova-core/examples/: serve.rs
crates/nova-core/src/: breakpoint.rs  ca.rs  flow.rs  intercept.rs  lib.rs  procinfo.rs  rules.rs  scripting.rs  sysproxy.rs  tlsscope.rs  trust.rs
crates/nova-core/tests/: breakpoint.rs  proxy_capture.rs  tls_scope.rs  traffic_control.rs  websocket.rs
crates/nova-proto/: Cargo.toml
crates/nova-proto/src/: lib.rs
scripts/: gen-icon.mjs
src/: App.tsx  api.ts  filter.test.ts  filter.ts  session.test.ts  session.ts  store.test.ts  store.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
src/bindings/: BodyPreview.ts  CaStatus.ts  Flow.ts  FlowState.ts  Header.ts  Interception.ts  NetworkConditions.ts  ProxyStatus.ts  Rule.ts  RuleKind.ts  TlsScope.ts  WsDirection.ts  WsMessage.ts  WsOpcode.ts
