[package]
name = "novaproxy"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "NovaProxy — open-source HTTP/HTTPS debugging proxy"
default-run = "novaproxy"

[lib]
name = "novaproxy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = "5"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

nova-core = { path = "../crates/nova-core" }
nova-proto = { path = "../crates/nova-proto" }
